--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,9 +3,9 @@
     <string name="app_description">Download files from Internet</string>
     <string name="action_settings">Settings</string>
 
-    <string name="notification_title">Udacity: Android Kotlin Nanodegree </string>
+    <string name="notification_title">Udacity: Android Kotlin Nanodegree</string>
     <string name="notification_description">The Project 3 repository is downloaded</string>
-    <string name="notification_button">See changes</string>
+    <string name="notification_button">Check the status</string>
 
     <string name="button_name">Download</string>
     <string name="button_loading">We are loading</string>
